fixed video time bar overflowing

--- a/src/components/Controls.module.css
+++ b/src/components/Controls.module.css
@@ -38,7 +38,7 @@
 
 .timebar {
     background-color: rgba(173, 173, 173, 0.712);
-    width: 100%;
+    width: 99.8%;
     height: .5rem;
     color: red;
     margin-bottom: 1rem;
